5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1649_2446.log
== SUBMITION (2019-04-16 14:34:45) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print"acesso liberado"

-- EXECUTION TIME:
0.030257
-- ERROR:
Error response from daemon: Container 07ec0cbe003e36623c462c102cc1b6493807919234e1ffc503f02ac3181a6569 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:34:56) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.03531
-- ERROR:
Error response from daemon: Container 07ec0cbe003e36623c462c102cc1b6493807919234e1ffc503f02ac3181a6569 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:35:05) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:35:35) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:35:38) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:35:39) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:35:44) 
-- CODE:
num = int(input("insira a senha de 1 a 6 digitos:"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:36) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:44) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10


-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:46) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10


-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:55) 
-- CODE:
num = int(input("digita os seis da senha,macho"))

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:56) 
-- CODE:
num = int(input("digita os seis da senha,macho"))

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:37:57) 
-- CODE:
num = int(input("digita os seis da senha,macho"))

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:38:05) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
print(num)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:38:08) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
print(num)
-- OUTPUT:
87612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:39:38) 
-- CODE:
num = int(input("digita os seis da senha,macho"))
d1 = num // 100000 % 10
d2 = num // 10000 % 10
d3 = num // 1000 % 10
d4 = num // 100 % 10
d5 = num // 10 % 10
d6 = num // % 10
if (d2 + d4 + d6) % (d1 + d3 + d5) != 0
	print("senha invalida")
else:
	print("acesso liberado")

-- ERROR:
File "XXXX", line 7
    d6 = num // % 10
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
